@@ -6,7 +6,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Map.Entry;
 import java.util.StringJoiner;
-import java.util.stream.Collectors;
 
 import fr.insee.kraftwerk.core.KraftwerkError;
 import fr.insee.kraftwerk.core.metadata.PaperUcq;
@@ -67,7 +66,7 @@ public class CleanUpProcessing extends DataProcessing {
             paperUcqVtlNames.addAll(
                     variablesMap.getPaperUcq().stream()
                             .map(variable -> variablesMap.getFullyQualifiedName(variable.getName()))
-                            .collect(Collectors.toList())
+                            .toList()
             );
         }
         if (!paperUcqVtlNames.isEmpty()) {
